<resources>
    <string name="app_name">RestaurantPOS</string>

    <!-- Dashboard Texts -->
    <string name="text_order_store">매장 식사</string>
    <string name="text_order_take_out">포장</string>
    <string name="text_store_logo">매장 로고</string>
    <string name="text_mooing_logo">무잉 로고</string>

    <!-- Order Texts -->
    <string name="text_order_home_button">홈</string>
    <string name="text_order_back_button">뒤</string>
    <string name="text_order_total_amount">전체 금액</string>
    <string name="text_order_menu">메뉴</string>
    <string name="text_order_menu_type">메뉴 종류</string>
    <string name="text_order_quantity">수량</string>
    <string name="text_order_item_price">가격</string>
    <string name="text_order_cancel">취소하기</string>
    <string name="text_order_complete">주문하기</string>

    <!-- Order Confirm Texts -->
    <string name="text_order_confirm">주문 확인</string>
    <string name="text_order_confirm_list">목록</string>
    <string name="text_order_confirm_quantity">주문 수량</string>
    <string name="text_oder_confirm_price">가격</string>
    <string name="text_order_confirm_cancel">취소</string>
    <string name="text_order_confirm_complete">왼료</string>

    <!-- Notice No Menus Texts -->
    <string name="text_notice_no_menus">알림</string>
    <string name="text_notice_description">선택한 메뉴가 없습니다. 메뉴 선택 후 다시 시도해 주세요.</string>
    <string name="text_notice_confirm">확인</string>

    <!-- Payment Texts -->
    <string name="text_payment_way">신용/체크카드 결제</string>
    <string name="text_payment_description">카드를 끝까지 넣어주세요</string>
    <string name="text_payment_purchase_amount">구매 금액</string>
    <string name="text_payment_amount">결제 금액</string>
    <string name="text_payment_item_amount">총 수량</string>

    <!-- Menu Settings Texts -->
    <string name="text_menu_management">메뉴 관리</string>
    <string name="text_option_settings">옵션 설정</string>
    <string name="text_app_exit">앱 종료</string>

    <!-- Food Settings Texts -->
    <string name="text_food_settings_name">이름</string>
    <string name="text_food_settings_id">NO</string>
    <string name="text_food_settings_price">가격</string>
    <string name="text_food_settings_category">종류</string>

    <!-- Menu Management Texts -->
    <string name="text_menu_management_add">메뉴 추가</string>
    <string name="text_menu_management_all">모든 메뉴</string>
    <string name="text_menu_management_delete">삭제하기</string>
    <string name="text_menu_management_update">수정하기</string>
    <string name="text_menu_management_insert">추가하기</string>
    <string name="text_menu_management_search">검색</string>
    <string name="text_menu_number">번호</string>
    <string name="text_menu_title">메뉴명</string>
    <string name="text_menu_price">가격</string>
    <string name="text_menu_quantity">수량</string>
    <string name="text_menu_category">메뉴 종류</string>

    <!-- Option Settings Texts -->
    <string name="text_option_settings_env">환경 설정</string>
    <string name="text_option_settings_pin">PIN 번호 설정</string>
    <string name="text_option_settings_store">매장 설정</string>

    <!-- Environment Settings Texts -->
    <string name="text_environment_settings_back">뒤</string>
    <string name="text_environment_settings_kiosk">키오스크 정보</string>
    <string name="text_environment_settings_general_information">일반 사항</string>

    <!-- Kiosk Information Texts -->
    <string name="text_kiosk_information_name">키오스크 이름</string>
    <string name="text_kiosk_information_version">키오스크 버전</string>
    <string name="text_kiosk_information_type">키오스크 유형</string>
    <string name="text_kiosk_information_developer">키오스크 개발자</string>

    <!-- Store Setting Texts -->
    <string name="text_store_setting_store_logo">매장 로고</string>
    <string name="text_store_setting_mooing_logo">무잉 로고</string>
    <string name="text_store_setting_merchant_information">가맹점정보</string>
    <string name="text_store_setting_basic_information">기본 정보</string>
    <string name="text_store_setting_more_information">추가 정보</string>
    <string name="text_store_setting_save">저장</string>
    <string name="text_store_setting_branch_name">지점명</string>
    <string name="text_store_setting_owner_name">점주명</string>
    <string name="text_store_setting_phone_number">전화 번호</string>
    <string name="text_store_setting_address">주소</string>

    <!-- Language Texts -->
    <string name="text_language_name">English</string>
    <string name="text_language_icon">Language Icon</string>

    <!-- Menu Add & Update Texts -->
    <string name="text_menu_add_name">메뉴 이름</string>
    <string name="text_menu_add_price">메뉴 가격</string>
    <string name="text_menu_add_quantity">메뉴 수량</string>
    <string name="text_menu_add_category">메뉴 종류</string>
    <string name="text_menu_add_photo">메뉴 사진</string>
    <string name="text_menu_add">메뉴 추가</string>
    <string name="text_menu_update">메뉴 수정</string>
    <string name="text_menu_add_title">메뉴명</string>
    <string name="text_menu_add_title_english">영어 메뉴명</string>
    <string name="text_menu_add_description">설명</string>
    <string name="text_menu_add_item_price">가격</string>
    <string name="text_menu_add_item_quantity">수량</string>
    <string name="text_menu_add_item_category">메뉴 종류</string>
    <string name="text_menu_add_item_photo">사진 추가</string>
    <string name="text_menu_add_serving_size">1회 제공량(kcal)</string>
    <string name="text_menu_add_saturated_fat">포화지방(g)</string>
    <string name="text_menu_add_protein">단백질(g)</string>
    <string name="text_menu_add_sodium">나트륨(mg)</string>
    <string name="text_menu_add_sugar">당류(g)</string>
    <string name="text_menu_add_caffeine">카페인(mg)</string>
    <string name="text_menu_add_allergens">알레르기 유발요인</string>
    <string name="text_order_text">주문하기</string>
    <string name="text_menu_add_item_product_nutritional_information">제품 영양 정보</string>
    <string name="text_menu_add_item_serving_size">1회 제공량(kcal)</string>
    <string name="text_menu_add_item_sodium">나트륨(mg)</string>
    <string name="text_dialog_notice">알림</string>
    <string name="text_notice_description_1">선택된 메뉴가 없습니다</string>
    <string name="text_notice_description_2">메뉴선택 후 다시 시도해주세요</string>
    <string name="text_notice_button">확인</string>
    <string name="text_empty_image">Empty image</string>
    <string name="text_empty">아직 메뉴가 없습니다.</string>
    <string name="text_back">Back</string>
    <string name="text_enter_password">비밀번호를 입력하세요</string>


    <!-- Categories of Coffee -->
    <string name="cold_brew_coffee">콜드브루</string>
    <string name="brood_coffee">브루드</string>
    <string name="espresso">에스프레소</string>
    <string name="frappucino">프라푸치노</string>
    <string name="blended">블렌디드</string>
    <string name="starbucks_physio">피지오</string>
    <string name="tea">티</string>
    <string name="juice">주스</string>
    <string name="text_category">Category</string>

    <!-- Detail Item Texts -->
    <string name="text_detail_photo">Detail Photo</string>
    <string name="text_detail_confirm">확인</string>
    <string name="text_detail_back">뒤로</string>
    <string name="text_detail_title">콜드 브루 플로트</string>
    <string name="text_detail_title_eng">Cold Brew Float</string>
    <string name="text_detail_description">[리저브 전용음료] 리저브 콜드 브루 위에 녹아 내리는 한 스쿱의 바닐라 아이스크림</string>
    <string name="text_detail_nutritional_information">제품 영양 정보</string>
    <string name="text_detail_tall">Tall(톨) / 355ml(12 fl oz)</string>
    <string name="text_detail_serving_size">1회 제공량(kcal)</string>
    <string name="text_detail_serving_size_value">225</string>
    <string name="text_detail_saturated_fat">포화지방(g)</string>
    <string name="text_detail_saturated_fat_value">10</string>
    <string name="text_detail_protein">단백질(g)</string>
    <string name="text_detail_protein_value">3</string>
    <string name="text_detail_sodium">나트륨(mg)</string>
    <string name="text_detail_sodium_value">70</string>
    <string name="text_detail_sugar">당류(g)</string>
    <string name="text_detail_sugar_value">100</string>
    <string name="text_detail_caffeine">카페인(mg)</string>
    <string name="text_detail_caffeine_value">190</string>
    <string name="text_detail_allergens">알레르기 유발요인:</string>
    <string name="text_detail_allergens_value">우유</string>
    <string name="btn_text_decrease">-</string>
    <string name="text_item_order_quantity">0</string>
    <string name="text_button_increase">+</string>


</resources>