<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.main.MainFragment">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:contentDescription="@string/text_mooing_logo"
        android:src="@drawable/ic_launcher_background" />

    <ImageView
        android:layout_width="@dimen/dimen_450dp"
        android:layout_height="@dimen/dimen_250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/dimen_300dp"
        android:layout_marginTop="@dimen/dimen_200dp"
        android:contentDescription="@string/text_store_logo"
        android:src="@drawable/ic_launcher_background" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_order_store"
        android:layout_width="@dimen/dimen_350dp"
        android:layout_height="@dimen/dimen_250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dimen_120dp"
        android:layout_marginBottom="@dimen/dimen_400dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/text_order_store"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/dimen_40dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_order_take_out"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/dimen_120dp"
        android:layout_marginBottom="@dimen/dimen_400dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/text_order_take_out"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/dimen_40dp" />

</RelativeLayout>