<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.main.DashboardFragment">

    <ImageView
        android:layout_width="@dimen/dimen_400dp"
        android:layout_height="@dimen/dimen_400dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="-50dp"
        android:contentDescription="@string/text_mooing_logo"
        android:src="@drawable/logo_mooing" />

    <ImageView
        android:layout_width="@dimen/dimen_400dp"
        android:layout_height="@dimen/dimen_400dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/dimen_350dp"
        android:layout_marginTop="425dp"
        android:contentDescription="@string/text_store_logo"
        android:src="@drawable/logo_starbucks" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_order_take_out"
        android:layout_width="@dimen/dimen_300dp"
        android:layout_height="@dimen/dimen_300dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/dimen_150dp"
        android:fontFamily="@font/noto_sans"
        android:layout_marginBottom="@dimen/dimen_350dp"
        android:backgroundTint="@color/milk"
        android:drawableTop="@drawable/ic_bag_shopping_light"
        android:paddingTop="40dp"
        android:text="@string/text_order_take_out"
        android:textColor="@color/black_russian"
        android:textSize="50sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/dimen_20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_order_store"
        android:layout_width="@dimen/dimen_300dp"
        android:layout_height="@dimen/dimen_300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/dimen_200dp"
        android:layout_marginBottom="@dimen/dimen_350dp"
        android:backgroundTint="@color/milk"
        android:drawableTop="@drawable/ic_store_light"
        android:paddingTop="40dp"
        android:text="@string/text_order_store"
        android:fontFamily="@font/noto_sans"
        android:textColor="@color/black_russian"
        android:textSize="50sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/dimen_20dp" />


</RelativeLayout>