<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableLayout
        android:id="@+id/table_heading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"

        android:layout_marginEnd="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:textSize="@dimen/font_size_40sp"
                android:layout_column="0"
                android:textAlignment="textStart"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:layout_marginEnd="1dp"
                android:layout_marginStart="1dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/cornflower_blue"
                android:text="@string/text_menu_number"/>

            <TextView
                android:layout_height="60dp"
                android:textSize="@dimen/font_size_40sp"
                android:layout_width="0dp"
                android:layout_column="1"
                android:layout_weight="1"
                android:text="@string/text_menu_title"
                android:paddingEnd="5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/cornflower_blue"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginEnd="1dp"
                android:layout_marginStart="1dp"
                />
            <TextView
                android:layout_height="60dp"
                android:textSize="@dimen/font_size_40sp"
                android:layout_width="80dp"
                android:layout_column="1"
                android:layout_weight="1"
                android:text="@string/text_menu_price"
                android:paddingEnd="45dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/cornflower_blue"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginEnd="1dp"
                android:layout_marginStart="1dp"
                />

            <TextView
                android:layout_height="60dp"
                android:textSize="@dimen/font_size_40sp"
                android:layout_width="0dp"
                android:layout_column="2"
                android:layout_weight="1"
                android:text="@string/text_menu_quantity"
                android:paddingEnd="5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/cornflower_blue"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginEnd="1dp"
                android:layout_marginStart="1dp"
                />
            <TextView
                android:layout_height="60dp"
                android:textSize="@dimen/font_size_40sp"
                android:layout_width="0dp"
                android:layout_column="2"
                android:layout_weight="1"
                android:text="@string/text_menu_category"
                android:paddingEnd="5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/cornflower_blue"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginEnd="1dp"
                android:layout_marginStart="1dp"
                />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>